ndb - bug#24544   fix so backup message is printed even in case of "ndb_mgm -e"

storage/ndb/src/common/debugger/signaldata/BackupSignalData.cpp:
  fix backup printer
storage/ndb/src/mgmclient/CommandInterpreter.cpp:
  Fix so that backup message is printed even if "ndb_mgm -e"
storage/ndb/src/ndbapi/SignalSender.cpp:
  move method into TransporterFacade to enable API_TRACE
storage/ndb/src/ndbapi/TransporterFacade.cpp:
  move method into TransporterFacade to enable API_TRACE